auhal: limit scope of mutex

This should suffice as the variable is only modified on this thread.
Avoids deadlock in refs #9141

(cherry picked from commit b2823701b6123b5cb1f862dec7f5a62a9d77d17f)
Signed-off-by: Felix Paul Kühne <fkuehne@videolan.org>